# bioinf1

./: .gitignore  README.md  output2.paf  output_final.paf
mapper/: CMakeLists.txt  compare_paf.py
mapper/alignment/: alignment.cpp  alignment.hpp
mapper/minimizers/: minimizers.cpp  minimizers.hpp
mapper/src/: main.cpp  mapper.cpp  mapper.hpp
mapper/src/output/: main
src/: main.cpp
